* macro.tex, ch01.tex, app01.tex   (schemein -> scheme, schemep -> schemepart, ocamlin -> ocaml,    ocamlp -> ocamlpart): Renamed macros.
  (schemefrom, ocamlfrom): New macros.

  (scheme, ocaml): Removed the custom environments

  Use ...from macros instead of ...part.

* master.tex, ch01.tex
  (MyEnum): New environment. It does not indent items. Use this instead of
  enumeration.

* src/ch01-ex18.ss, src/ch01-ex18.ml
  Handle '0 x n' case more efficiently.

* src/ch01-ex38.ss, src/ch01-ex38.ml
  Use only primitive operators to calculate terms, not floor.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@21 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -6,39 +6,39 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.3}
-\ocamlin{./src/ch01-ex03.ml}
+\ocaml{./src/ch01-ex03.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.7}
-\ocamlin{./src/ch01-ex07.ml}
+\ocaml{./src/ch01-ex07.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.8}
-\ocamlin{./src/ch01-ex08.ml}
+\ocaml{./src/ch01-ex08.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.11}
-\ocamlin{./src/ch01-ex11.ml}
+\ocaml{./src/ch01-ex11.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.12}
-\ocamlin{./src/ch01-ex12.ml}
+\ocaml{./src/ch01-ex12.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.16}
-\ocamlin{./src/ch01-ex16.ml}
+\ocaml{./src/ch01-ex16.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.17}
-\ocamlin{./src/ch01-ex17.ml}
+\ocaml{./src/ch01-ex17.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.18}
-\ocamlin{./src/ch01-ex18.ml}
+\ocamlfrom{./src/ch01-ex18.ml}{7}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.19}
-\ocamlin{./src/ch01-ex19.ml}
+\ocaml{./src/ch01-ex19.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.22}
@@ -51,11 +51,11 @@
   환경에서는 프롬프트에서 \texttt{\#load "unix.cma"} 명령을 수행하면
   \texttt{Unix} 모듈을 사용할 수 있다.}.
 
-\ocamlin{./src/ch01-ex22.ml}
+\ocaml{./src/ch01-ex22.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.23}
-\ocamlin{./src/ch01-ex23.ml}
+\ocaml{./src/ch01-ex23.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.24}
@@ -68,27 +68,27 @@
 라이브러리처럼 표준 라이브러리가 아니므로 사용자가 직접 \texttt{nums.cma} 혹은
 \texttt{nums.cmxa}를 사용할 것임을 명시해야 한다.
 
-\ocamlin{./src/ch01-ex24.ml}
+\ocaml{./src/ch01-ex24.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.27}
-\ocamlinp{./src/ch01-ex27.ml}{45}{55}
+\ocamlpart{./src/ch01-ex27.ml}{45}{55}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.28}
-\ocamlin{./src/ch01-ex28.ml}
+\ocaml{./src/ch01-ex28.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.29}
-\ocamlin{./src/ch01-ex29.ml}
+\ocaml{./src/ch01-ex29.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.30}
-\ocamlin{./src/ch01-ex30.ml}
+\ocaml{./src/ch01-ex30.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.31}
-\ocamlin{./src/ch01-ex31.ml}
+\ocaml{./src/ch01-ex31.ml}
 
 \texttt{approx\_pi} 프로시저를 구현할 때, 주어진 식에서 분자와 분모를 따로
 구한 후 나누는 식으로(즉, \texttt{product}를 두 번 사용한 결과를 나눔) 구현하지
@@ -98,7 +98,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.32}
-\ocamlin{./src/ch01-ex32.ml}
+\ocaml{./src/ch01-ex32.ml}
 
 \texttt{accumulate} 함수를 사용하여 \texttt{prodcut}와 \texttt{sum}을 구현할
 때 \texttt{combiner}로 쓰일 연산자를 넘기려면 \SCHEME에서와 달리 연산자를
@@ -132,15 +132,15 @@ Error: This expression has type ('a -> 'b -> 'c) -> 'a -> 'b -> 'c
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.33}
-\ocamlin{./src/ch01-ex33.ml}
+\ocaml{./src/ch01-ex33.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.36}
-\ocamlin{./src/ch01-ex36.ml}
+\ocaml{./src/ch01-ex36.ml}
 
 다음은 작성한 프로그램으로 교재에서 제시한 식의 고정점을 구해본 것이다.
 
-\begin{ocaml}
+\begin{lstlisting}[language={[Objective]Caml}]
 # fixed_point (fun x -> 1.0 +. (1.0 /. x)) 1.0;;
 1: 1.
 2: 2.
@@ -173,51 +173,47 @@ val average : float -> float -> float = <fun>
 10: 4.5555386477
 11: 4.55553620619
 - : float = 4.55553620618503885
-\end{ocaml}
+\end{lstlisting}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.37}
-\ocamlin{./src/ch01-ex37.ml}
+\ocaml{./src/ch01-ex37.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.38}
-\ocamlinp{./src/ch01-ex38.ml}{10}{18}
-
-\SCHEME으로 작성할 때 소수점 이하를 없애기 위해 \texttt{floor} 프로시저를
-썻던 것과는 달리, \OCAML에서는 정수 나눗셈의 결과가 소수점이 버려진 몫이 되므로
-특별한 함수를 사용할 필요는 없다.
+\ocamlfrom{./src/ch01-ex38.ml}{10}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.39}
-\ocamlinp{./src/ch01-ex39.ml}{12}{16}
+\ocamlfrom{./src/ch01-ex39.ml}{12}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.40}
-\ocamlinp{./src/ch01-ex40.ml}{20}{37}
+\ocamlfrom{./src/ch01-ex40.ml}{20}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.41}
-\ocamlin{./src/ch01-ex41.ml}
+\ocaml{./src/ch01-ex41.ml}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%p%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.42}
-\ocamlin{./src/ch01-ex42.ml}
+\ocaml{./src/ch01-ex42.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.43}
-\ocamlinp{./src/ch01-ex43.ml}{3}{6}
+\ocamlfrom{./src/ch01-ex43.ml}{3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.44}
-\ocamlinp{./src/ch01-ex44.ml}{8}{14}
+\ocamlfrom{./src/ch01-ex44.ml}{8}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.45}
-\ocamlinp{./src/ch01-ex45.ml}{29}{35}
+\ocamlfrom{./src/ch01-ex45.ml}{29}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.46}
-\ocamlinp{./src/ch01-ex46.ml}{7}{27}
+\ocamlfrom{./src/ch01-ex46.ml}{7}
 
 %%% Local Variables: 
 %%% mode: latex
