--- a/ch02.tex
+++ b/ch02.tex
@@ -4,12 +4,15 @@
 \exercise{2.1}
 
 문제에서 제시하는 정리 방법을 간단히 말하면 분모가 항상 양수가 되게 하라는
-것이다. 따라서 다음과 같이 구현할 수 있다.
+것이다. 즉 분모가 음수일 때 분자, 분모 각각의 부호를 바꾸어 주면 된다.
 
 \schemefrom{./src/ch02-ex01.ss}{6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{2.2}
+
+\scheme{./src/ch02-ex02.ss}
+
 
 
 
