* Added the solution of Exercise 2.3.
* macro.tex (HR): New macro to draw horizontal lines.
(lstset): Changed the font of comments to roman, non-italic. Increased the gray
level of comments to 0.4.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@24 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -237,6 +237,11 @@ val average : float -> float -> float = <fun>
 
 \ocaml{./src/ch02-ex02.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.3}
+
+\ocamlfrom{./src/ch02-ex03.ml}{34}
+
 
 %%% Local Variables: 
 %%% mode: latex
