--- a/macro.tex
+++ b/macro.tex
@@ -52,6 +52,11 @@
 \newcommand{\ftitle}[1]{\frametitle{\textsf{#1}}}
 
 
+%%% drawing %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newcommand\HR[2][2]{\rule[#1pt]{#2}{0.4pt}}
+
+
 %%% fancyvrb %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \makeatletter
@@ -69,7 +74,7 @@
 \lstset{
   basicstyle=\small\ttfamily,
   keywordstyle=\ttfamily\bfseries,
-  commentstyle=\it\color[gray]{0.3},
+  commentstyle=\color[gray]{0.4},
   numbers=left,
   numberstyle=\tiny,
   numbersep=10pt,
