* Added the solution of Exercise 2.4.
* macro.tex (ocamlfrom, schemefrom): Removed
(ocaml, scheme): Changed to take extra optional argument, which represents
the first line number of source codes.

* ch01.tex, ch02.tex, app01.tex: Changed uses of ...from to uses of ocaml and
scheme.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@25 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -34,7 +34,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.18}
-\ocamlfrom{./src/ch01-ex18.ml}{7}
+\ocaml[7]{./src/ch01-ex18.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.19}
@@ -181,15 +181,15 @@ val average : float -> float -> float = <fun>
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.38}
-\ocamlfrom{./src/ch01-ex38.ml}{10}
+\ocaml[10]{./src/ch01-ex38.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.39}
-\ocamlfrom{./src/ch01-ex39.ml}{12}
+\ocaml[12]{./src/ch01-ex39.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.40}
-\ocamlfrom{./src/ch01-ex40.ml}{20}
+\ocaml[20]{./src/ch01-ex40.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.41}
@@ -201,19 +201,19 @@ val average : float -> float -> float = <fun>
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.43}
-\ocamlfrom{./src/ch01-ex43.ml}{3}
+\ocaml[3]{./src/ch01-ex43.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.44}
-\ocamlfrom{./src/ch01-ex44.ml}{8}
+\ocaml[8]{./src/ch01-ex44.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.45}
-\ocamlfrom{./src/ch01-ex45.ml}{29}
+\ocaml[29]{./src/ch01-ex45.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{1.46}
-\ocamlfrom{./src/ch01-ex46.ml}{7}
+\ocaml[7]{./src/ch01-ex46.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{2.1}
@@ -221,7 +221,7 @@ val average : float -> float -> float = <fun>
 다음 구현처럼 \OCAML에서 값의 쌍을 다룰 때는 일반적인 리스트 대신
 \KOEN{튜플}{tuple}을 사용하는 것이 좋다.
 
-\ocamlfrom{./src/ch02-ex01.ml}{7}
+\ocaml[7]{./src/ch02-ex01.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{2.2}
@@ -230,18 +230,23 @@ val average : float -> float -> float = <fun>
   language} 이다. 이는 좀 더 견고한 프로그램을 만들 수 있게 해주는데, 다음
 구현이 그것의 한 예를 보여주고 있다. 여기서는 \texttt{point}, \texttt{segment}
 타입을 정의한 후 해당하는 \KOEN{구성자}{constructor}와
-\KOEN{선택자}{selector}가 의도한 타입의 값만을 받도록 하였다. 반면에
-앞에서 \SCHEME으로 작성한 \texttt{x-point} 프로시져는 가능한 값을 한정짓지
-않고 \texttt{car}를 적용하기 때문에, \texttt{(cons (cons 1 5) 3)}과 같은
-의도치 않은 값에 대해서도 결과를 내주게 된다.
+\KOEN{선택자}{selector}가 의도한 타입의 값만을 받도록 하였다. 예를 들어
+\texttt{x\_point}는 \texttt{point} 타입의 값만을 받는다. 이와 달리
+앞에서 \SCHEME으로 작성한 \texttt{x-point} 프로시져는 가능한 인자를 한정짓지
+않고 무조건 \texttt{car}를 적용하기 때문에, \texttt{(cons (cons 1 5) 3)}과
+같은 의도치 않은 인자에 대해서도 결과를 내주게 된다.
 
 \ocaml{./src/ch02-ex02.ml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \exercise{2.3}
 
-\ocamlfrom{./src/ch02-ex03.ml}{34}
+\ocaml[34]{./src/ch02-ex03.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.4}
+
+\ocaml{./src/ch02-ex04.ml}
 
 %%% Local Variables: 
 %%% mode: latex
