* master.tex: Remove the unnecessary documentclass option, a4wide.
* Add the solutions of 2.5-2.9.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@26 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/app01.tex
+++ b/app01.tex
@@ -248,6 +248,27 @@ val average : float -> float -> float = <fun>
 
 \ocaml{./src/ch02-ex04.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.5}
+
+\ocaml{./src/ch02-ex05.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.6}
+
+\ocaml{./src/ch02-ex06.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.7}
+
+\ocaml{./src/ch02-ex07.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.8}
+
+\ocaml[33]{./src/ch02-ex08.ml}
+
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "master"
