--- a/master.tex
+++ b/master.tex
@@ -1,4 +1,4 @@
-\documentclass[final,a4wide,11pt]{report}
+\documentclass[final,11pt]{report}
 \usepackage[hangul]{kotex}
 \usepackage{a4wide}
 \usepackage{pdfsync}
