* macro.tex (Ra): Add `\ensuremath'.
* res/Makefile: Generate PDF files instead of PNG files.

* res/ch01-ex14.dot: Comment out meaningless size definitions.


git-svn-id: svn+ssh://lab/home/svn/sicp/trunk@27 c3607132-0dcd-42ba-a3c3-24b50010b387

--- a/macro.tex
+++ b/macro.tex
@@ -12,7 +12,7 @@
 %%% Arrows
 %%%
 \newcommand{\ra}[0]{\rightarrow}
-\newcommand{\Ra}[0]{\Rightarrow}
+\newcommand{\Ra}[0]{\ensuremath{\Rightarrow}}
 \newcommand{\rhu}[0]{\rightharpoonup}
 \newcommand{\la}[0]{\leftarrow}
 \newcommand{\La}[0]{\Leftarrow}
