* Add the solutions of 2.10,2.11,2.12.

--- a/app01.tex
+++ b/app01.tex
@@ -268,6 +268,29 @@ val average : float -> float -> float = <fun>
 
 \ocaml[33]{./src/ch02-ex08.ml}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.10}
+
+\OCAML에서는 오류를 \KOEN{예외}{exception}로 다룬다. `\texttt{Pervasives}'
+모듈에 미리 정의된 예외 중에는 자주 쓰이는 예외 `\texttt{Invalid\_argument}'가
+있는데, \OCAML에서는 이 예외를 편리하게 발생시킬 수 있는
+`\texttt{invalid\_arg}' 함수를 제공한다. 다음 코드에서는 이 함수를 사용하여
+예외를 발생시키고 있다.
+
+\ocaml[33]{./src/ch02-ex10.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.11}
+
+\ocaml[33]{./src/ch02-ex11.ml}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.12}
+
+\ocaml[18]{./src/ch02-ex12.ml}
+
+
+
 
 %%% Local Variables: 
 %%% mode: latex
