--- a/ch02.tex
+++ b/ch02.tex
@@ -171,13 +171,99 @@ $2^a$ 항을 얻어낼 수 있다. 다음은 이러한 성질을 이용하여
 즉, 더한 결과에 구간을 적용하는 것과 구간을 적용한 후 더하는 것 모두 같은
 결과를 내준다. 두 구간을 빼는 경우에도 마찬가지로 이러한 성질이
 적용된다. 하지만 곱셈과 나눗셈의 경우에는 성질을 적용할 수 없다. 다음은 성질을
-만족하지 않는 한 예이다.
+만족하지 않는 몇가지 예이다.
 \begin{align}
   w([-2,2]\times[4,8]) & = w([-8,16]) = 12 \notag \\
   w([-2,2]) \times w([4,8]) & = 2 \times 2 = 4 \notag \\
   w([-2,2]/[4,8]) & = w([-0.5,0.5]) = 0.5 \notag \\
   w([-2,2]) / w([4,8]) & = 2 / 2 = 1 \notag
 \end{align}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.10}
+
+\scheme[23]{./src/ch02-ex10.ss}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.11}
+
+문제에서 제시된 대로, 양 끝점의 부호를 고려하면 곱셈을 덜 하고도 답을 구해낼
+수 있다. 두 구간 $i_1=[l_1,u_1]$, $i_2=[l_2,u_2]$이 있을 때 가능한 몇가지 곱셈을
+살펴보면 다음과 같다.
+
+\begin{itemize}
+\item $l_1,u_1,l_2,u_2 \ge 0$ 일 때 -- 어느 쌍을 곱하여도 부호가 변하지
+  않으므로 큰 것끼리 곱한 것이 상한, 작은 것끼리 곱한 것이 하한이 된다. 즉,
+  결과는 $[l_1 \times l_2, u_1 \times u_2]$이다.
+\item $l_1,u_1 < 0$이고 $l_2,u_2 \ge 0$ 일 때 -- 가능한 모든 곱셈의 경우에서
+  부호가 음수가 되므로 음수 중 최소값과 양수 중 최대값을 곱한 것이 하한, 음수
+  중 최대값과 양수 중 최소값을 곱한 것이 상한이 된다. 즉, 결과는 $[l_1 \times
+  u_2, u_1 \times l_2]$이다.
+\end{itemize}
+
+이와 같이 각각의 경우를 차근차근 따져보면 쉽게 구현할 수 있다. 다음은 새로
+작성한 `\texttt{mul-interval}' 프로시저이다. 양 구간이 양수와 음수에 걸쳐 있는
+경우를 제외하곤 모두 두 번의 곱셈만이 쓰임을 알 수 있다.
+
+\scheme[22]{./src/ch02-ex11.ss}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.12}
+
+\scheme[16]{./src/ch02-ex12.ss}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.13}
+
+중심 $c_1$,$c_2$과 허용 오차율($\%$) $p_1$,$p_2$가 나타내는 구간 $i_1$,$i_2$의
+끝점 $l_1$,$u_1$,$l_2$,$u_2$는 다음과 같이 구해진다.
+
+\begin{equation}\notag
+  \begin{array}{rcl}
+    l_1 & = & c_1 - c_1 \cdot \frac{p_1}{100} \\
+    u_1 & = & c_1 + c_1 \cdot \frac{p_1}{100} \\
+    l_2 & = & c_2 - c_2 \cdot \frac{p_2}{100} \\
+    u_2 & = & c_2 + c_2 \cdot \frac{p_2}{100} \\
+  \end{array}
+\end{equation}
+
+만약 중심과 허용 오차율이 양수라면 구간의 모든 끝점 또한 양수이다. 이러한
+경우에 두 구간이 곱해진 새로운 구간의 양 끝점 $l$,$u$는 다음과 같이 정리할 수
+있다.
+
+\begin{equation}\notag
+  \begin{aligned}
+    l & = l_1 \cdot l_2 \\
+      & = (c_1 - c_1 \cdot \frac{p_1}{100}) (c_2 - c_2 \cdot \frac{p_2}{100}) \\
+      & = c_1c_2 - \frac{c_1c_2p_1}{100} - \frac{c_1c_2p_2}{100} + \frac{c_1c_2p_1p_2}{10000} \\
+    u & = u_1 \cdot u_2 \\
+      & = (c_1 + c_1 \cdot \frac{p_1}{100}) (c_2 + c_2 \cdot \frac{p_2}{100}) \\
+      & = c_1c_2 + \frac{c_1c_2p_1}{100} + \frac{c_1c_2p_2}{100} + \frac{c_1c_2p_1p_2}{10000} \\
+  \end{aligned}
+\end{equation}
+
+이러한 구간의 허용 오차율 $t$는 다음과 같이 구할 수 있다.
+
+\begin{equation}\notag
+  \begin{aligned}
+    t & = \frac{\frac{u - l}{2}}{\frac{u + l}{2}} \cdot 100 \\
+      & = \frac{u-l}{u+l} \cdot 100 \\
+      & = \frac{\frac{2c_1c_2p_1+2c_1c_2p_2}{100}}{2c_1c_2 +
+        \frac{2c_1c_2p_1p_2}{10000}} \cdot 100 \\
+      & = \frac{p_1+p_2}{1 + \frac{p_1p_2}{10000}} \\
+  \end{aligned}
+\end{equation}
+
+다음은 실제 곱셈한 구간의 허용 오차율과 앞의 공식으로 계산한 허용 오차율을
+비교해 본 것이다.
+
+\begin{lstlisting}[language=Scheme]
+> (percent (mul-interval (make-center-percent 6.5 10) (make-center-percent 5 12)))
+21.739130434782606
+> (* (/ (+ 10.0 12.0) (+ 1 (/ (* 10.0 12.0) 10000))))
+21.73913043478261
+\end{lstlisting}
+
 
 %%% Local Variables: 
 %%% mode: latex
