--- a/ch02.tex
+++ b/ch02.tex
@@ -264,6 +264,23 @@ $2^a$ 항을 얻어낼 수 있다. 다음은 이러한 성질을 이용하여
 21.73913043478261
 \end{lstlisting}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.14}
+
+예를 들어, 다음과 같은 경우에 주어진 두 프로시저는 다른 결과를 내준다.
+\begin{lstlisting}[language=Scheme]
+> (par1 (make-center-width 6 0.5) (make-center-width 10 0.2))
+(3.227544910179641 . 4.333333333333333)
+> (par2 (make-center-width 6 0.5) (make-center-width 10 0.2))
+(3.522875816993464 . 3.9700598802395213)
+\end{lstlisting}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\exercise{2.15}
+
+
+
+
 
 %%% Local Variables: 
 %%% mode: latex
